tests/e2e/string_none_cast.error
Error: syntax error in story at line 4

4|    b = "{foo()}"
      ^^^^^^^^^^^^^

E0126: Type casting not supported from `none` to `string`.
