tests/e2e/string_none_cast.story
function foo
    a = 1

b = "{foo()}"
